--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "bookmarks",
     "storage",
-    "tabs"
+    "tabs",
+    "activeTab"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -24,5 +25,8 @@
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
+  },
+  "chrome_url_overrides": {
+    "newtab": "visualization.html"
   }
 } 
