Refactor to modular architecture and add new features
Introduced a modular architecture with separate service modules for API, bookmarks, UI, detection, import/export, visualization, and utilities. Added new modular entry point (analyze_modular.js), UI components, and newtab page files. Enhanced analyze.js with analysis progress save/resume logic. Updated manifest and visualization files. Removed obsolete markdown file.

--- a/manifest.json
+++ b/manifest.json
@@ -32,9 +32,9 @@
     "128": "images/icon128.png"
   },
   "chrome_url_overrides": {
-    "newtab": "visualization.html"
+    "newtab": "pages/newtab/index.html"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   }
-} 
+}
